# agent-learn

./: .gitignore  AGENTS.md  README.md  template.py
1-prompt-chaining/: .env-example  README.md  main.py  pyproject.toml
2-routing-pattern/: .env-example  README.md  adk.py  pyproject.toml  routing-langchain.py
3-parallelization/: .env-example  README.md  adk-parallel.py  langchain-parallel.py  pyproject.toml
4-reflection/: README.md  adk-reviewer-critic.py  langchain.py  pyproject.toml
5-tool-use/: .env-example  README.md  code_exec.py  crewai-tools.py  google_search.py  pyproject.toml  tool_agent.py
common/: pyproject.toml
common/src/common/: __init__.py  logging_utils.py
