[project]
name = "4-reflection"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "common",
    "dotenv>=0.9.9",
    "langchain>=0.3.27",
    "langchain-anthropic>=0.3.20",
    "langchain-community>=0.3.29",
]

[tool.uv.sources]
common = { path = "../common", editable = true }
