[project]
name = "5-tool-use"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "common",
    "dotenv>=0.9.9",
    "langchain>=0.3.27",
    "langchain-google-genai>=2.1.12",
    "nest-asyncio>=1.6.0",
]

[tool.uv.sources]
common = { path = "../common", editable = true }
