[project]
name = "5-tool-use"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "common",
    "crewai>=0.193.2",
    "dotenv>=0.9.9",
    "google-adk>=1.15.0",
    "langchain>=0.3.27",
    "langchain-google-genai>=2.1.12",
    "nest-asyncio>=1.6.0",
]

[tool.uv.sources]
common = { path = "../common", editable = true }

[tool.ruff.lint]
select = ["I"]  # Enable import sorting rules

[tool.ruff.lint.isort]
# Optional: configure import sorting behavior
known-first-party = ["common"]

[tool.basedpyright]
reportMissingTypeStubs = "none"  # or "warning" instead of "error"
reportUntypedFunctionDecorator = false
